--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -1,7 +1,6 @@
 @BOOK{gravity,
    author = {{Poisson}, E. and {Will}, C.~M.},
     title = "{Gravity}",
-%booktitle = {Gravity, by Eric Poisson , Clifford M.~Will, Cambridge, UK: Cambridge University Press, 2014},
   address = {Cambridge},
 publisher = {Cambridge University Press},
      year = 2014,
@@ -26,6 +25,78 @@ publisher = {Oxford University Press},
   address = {Cambridge ; New York},
 publisher = {Cambridge University Press},
      year = {2006},
+}
+
+@ARTICLE{marconi:2003,
+       author = {{Marconi}, Alessandro and {Hunt}, Leslie K.},
+        title = "{The Relation between Black Hole Mass, Bulge Mass, and Near-Infrared
+        Luminosity}",
+      journal = {ApJ},
+     keywords = {Black Hole Physics, Galaxies: Bulges, Galaxies: Fundamental Parameters,
+        Galaxies: Nuclei, Astrophysics},
+         year = 2003,
+        month = May,
+       volume = {589},
+        pages = {L21-L24},
+          doi = {10.1086/375804},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0304274},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/2003ApJ...589L..21M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{eisenhauer:2005,
+       author = {{Eisenhauer}, F. and {Genzel}, R. and {Alexander}, T. and {Abuter}, R.
+        and {Paumard}, T. and {Ott}, T. and {Gilbert}, A. and
+        {Gillessen}, S. and {Horrobin}, M. and {Trippe}, S. and
+        {Bonnet}, H. and {Dumas}, C. and {Hubin}, N. and {Kaufer}, A.
+        and {Kissler-Patig}, M. and {Monnet}, G. and {Str{\"o}bele}, S.
+        and {Szeifert}, T. and {Eckart}, A. and {Sch{\"o}del}, R. and
+        {Zucker}, S.},
+        title = "{SINFONI in the Galactic Center: Young Stars and Infrared Flares in the
+        Central Light-Month}",
+      journal = {ApJ},
+     keywords = {Black Hole Physics, Galaxy: Center, Galaxy: Structure, Infrared: Stars,
+        Techniques: Spectroscopic, Astrophysics},
+         year = 2005,
+        month = Jul,
+       volume = {628},
+        pages = {246-259},
+          doi = {10.1086/430667},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0502129},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/2005ApJ...628..246E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{kormendy:2013,
+   author = {{Kormendy}, J. and {Ho}, L.~C.},
+    title = "{Coevolution (Or Not) of Supermassive Black Holes and Host Galaxies}",
+  journal = {ARA\&A},
+archivePrefix = "arXiv",
+   eprint = {1304.7762},
+     year = 2013,
+    month = aug,
+   volume = 51,
+    pages = {511-653},
+      doi = {10.1146/annurev-astro-082708-101811},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ARA%26A..51..511K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{greenstein:1964,
+   author = {{Greenstein}, J.~L. and {Schmidt}, M.},
+    title = "{The Quasi-Stellar Radio Sources 3C 48 and 3C 273.}",
+  journal = {ApJ},
+     year = 1964,
+    month = jul,
+   volume = 140,
+    pages = {1},
+      doi = {10.1086/147889},
+   adsurl = {http://adsabs.harvard.edu/abs/1964ApJ...140....1G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @ARTICLE{gebhardt:2005,
@@ -80,7 +151,6 @@ booktitle = {Black Holes from Stars to Galaxies -- Across the Range of Masses},
    series = {IAU Symposium},
    volume = 238,
    eprint = {astro-ph/0612312},
-%   editor = {{Karas}, V. and {Matt}, G.},
     month = apr,
     pages = {3-12},
       doi = {10.1017/S1743921307004590},
@@ -113,7 +183,6 @@ booktitle = {Black Holes from Stars to Galaxies -- Across the Range of Masses},
     month = mar,
    volume = 9,
       eid = {3},
-%    pages = {3},
       doi = {10.12942/lrr-2006-3},
    adsurl = {http://adsabs.harvard.edu/abs/2006LRR.....9....3W},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -152,7 +221,6 @@ booktitle = {Astrophysics of Black Holes: From Fundamental Aspects to Latest Dev
 archivePrefix = "arXiv",
    eprint = {1507.06153},
 primaryClass = "astro-ph.HE",
-%   editor = {{Bambi}, C.},
     pages = {99},
       doi = {10.1007/978-3-662-52859-4_3},
    adsurl = {http://adsabs.harvard.edu/abs/2016ASSL..440...99M},
