Kaikki korjaukset tehty

--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -27,6 +27,150 @@ publisher = {Cambridge University Press},
      year = {2006},
 }
 
+@ARTICLE{eisenhauer:2018,
+   author = {{Gravity Collaboration} and {Abuter}, R. and {Amorim}, A. and 
+	{Anugu}, N. and {Baub{\"o}ck}, M. and {Benisty}, M. and {Berger}, J.~P. and 
+	{Blind}, N. and {Bonnet}, H. and {Brandner}, W. and {Buron}, A. and 
+	{Collin}, C. and {Chapron}, F. and {Cl{\'e}net}, Y. and {Coud{\'e} Du Foresto}, V. and 
+	{de Zeeuw}, P.~T. and {Deen}, C. and {Delplancke-Str{\"o}bele}, F. and 
+	{Dembet}, R. and {Dexter}, J. and {Duvert}, G. and {Eckart}, A. and 
+	{Eisenhauer}, F. and {Finger}, G. and {F{\"o}rster Schreiber}, N.~M. and 
+	{F{\'e}dou}, P. and {Garcia}, P. and {Garcia Lopez}, R. and 
+	{Gao}, F. and {Gendron}, E. and {Genzel}, R. and {Gillessen}, S. and 
+	{Gordo}, P. and {Habibi}, M. and {Haubois}, X. and {Haug}, M. and 
+	{Hau{\ss}mann}, F. and {Henning}, T. and {Hippler}, S. and {Horrobin}, M. and 
+	{Hubert}, Z. and {Hubin}, N. and {Jimenez Rosales}, A. and {Jochum}, L. and 
+	{Jocou}, K. and {Kaufer}, A. and {Kellner}, S. and {Kendrew}, S. and 
+	{Kervella}, P. and {Kok}, Y. and {Kulas}, M. and {Lacour}, S. and 
+	{Lapeyr{\`e}re}, V. and {Lazareff}, B. and {Le Bouquin}, J.-B. and 
+	{L{\'e}na}, P. and {Lippa}, M. and {Lenzen}, R. and {M{\'e}rand}, A. and 
+	{M{\"u}ler}, E. and {Neumann}, U. and {Ott}, T. and {Palanca}, L. and 
+	{Paumard}, T. and {Pasquini}, L. and {Perraut}, K. and {Perrin}, G. and 
+	{Pfuhl}, O. and {Plewa}, P.~M. and {Rabien}, S. and {Ram{\'{\i}}rez}, A. and 
+	{Ramos}, J. and {Rau}, C. and {Rodr{\'{\i}}guez-Coira}, G. and 
+	{Rohloff}, R.-R. and {Rousset}, G. and {Sanchez-Bermudez}, J. and 
+	{Scheithauer}, S. and {Sch{\"o}ller}, M. and {Schuler}, N. and 
+	{Spyromilio}, J. and {Straub}, O. and {Straubmeier}, C. and 
+	{Sturm}, E. and {Tacconi}, L.~J. and {Tristram}, K.~R.~W. and 
+	{Vincent}, F. and {von Fellenberg}, S. and {Wank}, I. and {Waisberg}, I. and 
+	{Widmann}, F. and {Wieprecht}, E. and {Wiest}, M. and {Wiezorrek}, E. and 
+	{Woillez}, J. and {Yazici}, S. and {Ziegler}, D. and {Zins}, G.
+	},
+    title = "{Detection of the gravitational redshift in the orbit of the star S2 near the Galactic centre massive black hole}",
+  journal = {A\&A},
+archivePrefix = "arXiv",
+   eprint = {1807.09409},
+ keywords = {Galaxy: center, gravitation, black hole physics},
+     year = 2018,
+    month = jul,
+   volume = 615,
+      eid = {L15},
+    pages = {L15},
+}
+
+@ARTICLE{haring:2004,
+   author = {{Häring}, N. and {Rix}, H.-W.},
+    title = "{On the Black Hole Mass-Bulge Mass Relation}",
+  journal = {ApJ},
+   eprint = {astro-ph/0402376},
+ keywords = {Galaxies: Bulges, Galaxies: Kinematics and Dynamics},
+     year = 2004,
+    month = apr,
+   volume = 604,
+    pages = {L89-L92},
+      doi = {10.1086/383567},
+   adsurl = {http://adsabs.harvard.edu/abs/2004ApJ...604L..89H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{ferrarese:2000,
+   author = {{Ferrarese}, L. and {Merritt}, D.},
+    title = "{A Fundamental Relation between Supermassive Black Holes and Their Host Galaxies}",
+  journal = {ApJ},
+   eprint = {astro-ph/0006053},
+ keywords = {Black Hole Physics, Galaxies: Evolution, Galaxies: Kinematics and Dynamics},
+     year = 2000,
+    month = aug,
+   volume = 539,
+    pages = {L9-L12},
+      doi = {10.1086/312838},
+   adsurl = {http://adsabs.harvard.edu/abs/2000ApJ...539L...9F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{vink:2001,
+   author = {{Vink}, J.~S. and {de Koter}, A. and {Lamers}, H.~J.~G.~L.~M.
+	},
+    title = "{Mass-loss predictions for O and B stars as a function of metallicity}",
+  journal = {A\&A},
+   eprint = {astro-ph/0101509},
+ keywords = {STARS: EARLY-TYPE, STARS: MASS-LOSS, STARS: SUPERGIANTS, STARS: WINDS, STARS: EVOLUTION},
+     year = 2001,
+    month = apr,
+   volume = 369,
+    pages = {574-588},
+      doi = {10.1051/0004-6361:20010127},
+   adsurl = {http://adsabs.harvard.edu/abs/2001A%26A...369..574V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{kerkwijk:2011,
+       author = {{van Kerkwijk}, M.~H. and {Breton}, R.~P. and {Kulkarni}, S.~R.},
+        title = "{Evidence for a Massive Neutron Star from a Radial-velocity Study of the Companion to the Black-widow Pulsar PSR B1957+20}",
+      journal = {ApJ},
+     keywords = {pulsars: individual: PSR B1957+20, stars: neutron, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2011,
+        month = Feb,
+       volume = {728},
+          eid = {95},
+        pages = {95},
+          doi = {10.1088/0004-637X/728/2/95},
+archivePrefix = {arXiv},
+       eprint = {1009.5427},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/2011ApJ...728...95V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{everitt:2009,
+   author = {{Everitt}, C.~W.~F. and {Adams}, M. and {Bencze}, W. and {Buchman}, S. and 
+	{Clarke}, B. and {Conklin}, J.~W. and {Debra}, D.~B. and {Dolphin}, M. and 
+	{Heifetz}, M. and {Hipkins}, D. and {Holmes}, T. and {Keiser}, G.~M. and 
+	{Kolodziejczak}, J. and {Li}, J. and {Lipa}, J. and {Lockhart}, J.~M. and 
+	{Mester}, J.~C. and {Muhlfelder}, B. and {Ohshima}, Y. and {Parkinson}, B.~W. and 
+	{Salomon}, M. and {Silbergleit}, A. and {Solomonik}, V. and 
+	{Stahl}, K. and {Taber}, M. and {Turneaure}, J.~P. and {Wang}, S. and 
+	{Worden}, P.~W.},
+    title = "{Gravity Probe B Data Analysis. Status and Potential for Improved Accuracy of Scientific Results}",
+  journal = {SSRv},
+ keywords = {General Relativity, Frame-dragging, Lense-Thirring},
+     year = 2009,
+    month = dec,
+   volume = 148,
+    pages = {53-69},
+      doi = {10.1007/s11214-009-9524-7},
+   adsurl = {http://adsabs.harvard.edu/abs/2009SSRv..148...53E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{einstein:1915,
+   author = {{Einstein}, A.},
+    title = "{Die Feldgleichungen der Gravitation}",
+  journal = {Sitzungsberichte der Königlich-Preussischen Akademie der Wissenschaften},
+     year = 1915,
+   adsurl = {http://adsabs.harvard.edu/abs/1915SPAW.......844E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{schwarzschild:1916,
+   author = {{Schwarzschild}, K.},
+    title = "{Über das Gravitationsfeld eines Massenpunktes nach der Einsteinschen Theorie}",
+  journal = {Sitzungsberichte der Königlich-Preussischen Akademie der Wissenschaften},
+     year = 1916,
+   adsurl = {http://adsabs.harvard.edu/abs/1916AbhKP1916..189S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{marconi:2003,
        author = {{Marconi}, Alessandro and {Hunt}, Leslie K.},
         title = "{The Relation between Black Hole Mass, Bulge Mass, and Near-Infrared
