--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -309,7 +309,7 @@ A tight $M_{BH} - \sigma$ correlation is important on a practical level since it
 
 \section{Newtonian dynamics}
 
-Solving the Newtonian two-body problem, i.e. determining the motions of two particles interacting only with each other, is extremely useful. It allows solving the behaviour of two essentially isolated objects, like a binary star system. It also enables us to calculate the masses of two objects that are observed to be interacting with each other.
+Solving the Newtonian two-body problem, i.e. determining the motions of two particles interacting only with each other, is extremely useful. It allows solving the behaviour of two essentially isolated objects, like a binary star system. It for example also enables us to calculate the masses of two objects that are observed to be interacting with each other.
 
 Let us assume we have a mass $m_1$ situated at position vector $\mathbf{r}_1$, and a mass $m_2$ at position vector $\mathbf{r}_1$. If the first mass exerts a force $\mathbf{f}_{21}$ on the second, by Newton's third law the second object exerts an equal and opposite force, $\mathbf{f}_{12} = -\mathbf{f}_{21}$, on the first one. If these two objects are the only ones in the system, their equations of motion are
 \begin{align}
@@ -362,11 +362,23 @@ where $\mathbf{r}$ is the aforementioned displacement vector and $G$ is the grav
 \begin{equation}
 \frac{m_1 m_2}{m_1 + m_2} \mathbf{\ddot{r}} = -\frac{G m_1 m_2}{r^3} \mathbf{r}
 \end{equation}
-which gives
+which gives us the equation of motion
 \begin{equation}
 \mathbf{\ddot{r}} = -\frac{G M}{r^3} \mathbf{r}
 \end{equation}
 where $M = m_1 + m_2$ is the total mass of the system.
+
+The solution for the equation of motion in polar coordinates is
+\begin{equation}
+\mathbf{r} = (r \ \mathrm{cos} f, r \ \mathrm{sin} f, 0) \ ,
+\end{equation}
+where
+\begin{equation}
+r = \frac{a (1-e^2)}{1 - e \ \mathrm{cos} f} \ .
+\end{equation}
+This is the equation for the orbit. $a$ is the semimajor axis of the orbit, $e$ is the eccentricity of the orbit, and $f$ is the true anomaly of the orbit. This is also the equation for a conic section in polar coordinates, thus all of these orbits are conic sections. The true anomaly is the only variable in the classic Newtonian case; semimajor axis and eccentricity are constants.
+
+The singularity in the equation of motion as $r$ approaches 0 is troublesome when running simulations with close encounters, so removing the term is very useful. The equation of motion also works only for classical Newtonian systems, but fails to give correct results when relativistic effects become prominent. Thus the equation must be altered with post-Newtonian terms to make it applicable in a relativistic setting. The next two chapters tackle these two problems respectively.
 
 %TODO
 %mainitse lopussa että ei toimi täsmälleen tälleen koska suhteellisuusteoria, pohjusta PN hommaa
